css/main.css
/* ... */
.main-title:hover {
  cursor: default;
}

.directors {
  display: flex;
  flex-direction: row;
  padding: 0vw 20vw;
  margin: 2vw 0vw 2vw 0vw;
}

.everyone-else {
  display: flex;
  flex-direction: row;
  padding: 0vw 18.5vw;
}

figure {
  width: 20vw;
}

.prof {
  display: absolute;
}

.figure-e {
  width: 25vw;
}

.figure-image {
  width: 15vw;
  height: 15vw;
  border-radius: 50%;
  border: 0.3vw solid #eeeeee;
  transition: transform 0.3s ease-out;
  max-width: 250px;
  max-height: 250px;
}

.figure-image:hover,
.figure-image-e:hover {
  transform: scale(1.05);
}

.figure-image-e {
  width: 12vw;
  height: 12vw;
  border-radius: 50%;
  border: 0.3vw solid #eeeeee;
  transition: transform 0.3s ease-out;
  max-width: 200px;
  max-height: 200px;
}

.figure-caption {
  color: lightgray;
  font-size: 1.2rem !important;
}

.figure-caption-e {
  color: lightgray;
  font-size: 1rem !important;
}

.figure-caption-title {
  margin-top: 20px;
  color: white;
  font-size: 1.4rem !important;
}

.figure-caption-title-e {
  margin-top: 20px;
  color: white;
  font-size: 1.2rem !important;
}

@font-face {
  font-family: "CircularStd";
  src: url("../fonts/CircularStd-Black.eot?#iefix") format("embedded-opentype"),
    url("../fonts/CircularStd-Black.woff") format("woff"),
    url("../fonts/CircularStd-Black.ttf") format("truetype"),
    url("../fonts/CircularStd-Black.svg#CircularStd-Black") format("svg");
  font-weight: normal;
  font-style: normal;
}

html {
  overflow: hidden !important;
  overflow-y: auto !important;
  scroll-behavior: smooth;
}

.row {
  min-height: 40px;
}

#schedule-section {
  height: 800px;
}

#title-i {
  font-size: 8.5rem;
}

@media (max-width: 1100px) {
  .main-title {
    font-size: 12vw !important;
  }

  #title-i {
    font-size: 12vw !important;
  }

  .main-logo {
    width: 50px !important;
    margin-bottom: -50px !important;
    margin-right: 20px !important;
    margin-left: 20px !important;
  }

  #about-section {
    padding: 5vh 10vw 5vh 10vw !important;
  }
  
  .prev {
    transform: translateY(-50px) translateX(-40px) !important;
  }
  .next {
    transform: translateY(-50px) translateX(40px) !important;
  }
  .quote {
    padding: 0px 10px !important;
  }
}

@media (max-width: 500px) {
  .main-logo {
    width: 30px !important;
    margin-bottom: -100px !important;
    margin-right: 20px !important;
    margin-left: 20px !important;
  }
}

.stuf1 {
  display: inline-table;
  padding: 20px 60px;
}

#about-section {
  padding: 5vh 20vw 5vh 20vw;
}

.infodiv {
  text-align: left;
}

#info-section {
  padding: 5vh 10vw;
}
a:active,
a:focus {
  outline: 0 !important;
  border: none !important;
  -moz-outline-style: none !important;
  outline-style: none !important;
}

@media (max-width: 992px) {
  .col-md-6 {
    min-width: 80vw;
  }
  .stuf1 {
    font-size: 0.8rem !important;
  }
  .text3 {
    font-size: 0.8rem !important;
  }
  .prof {
    width: 90vw !important;
  }
  .prof {
    padding: 5px 0;
  }
  body {
    font-size: 1rem !important;
  }
  h3 {
    font-size: 1.2rem !important;
  }
  .gb {
    padding: 4px 16px;
    cursor: pointer;
    font-size: 1rem;
    border-radius: 4px;
    margin: 0px 10px;
  }
  .figure-caption-title {
    font-size: 1.6rem !important;
  }
  .figure-caption {
    font-size: 1.4rem !important;
  }
  .figure-caption-e {
    font-size: 1rem !important;
  }
  .figure-caption-title-e {
    font-size: 1.2rem !important;
  }
  figure {
    width: 25vw;
  }
  .figure-e {
    width: 25vw;
  }
  .figure-image {
    width: 20vw;
    height: 20vw;
  }
  .figure-image-e {
    width: 17vw;
    height: 17vw;
  }
  .directors {
    padding: 0vw 12.5vw;
  }
  .speakers {
    padding: 0vw 12.5vw;
  }
  .everyone-else {
    padding: 0vw 5vw;
  }
  .navbar-brand,
  .navbar-toggler {
    font-size: 1.5rem !important;
  }
  .nav-link {
    font-size: 1rem !important;
  }
  .layer2 {
    padding: 4vh 0vh 30px 0vh !important;
  }
}

#ssssc {
  min-height: 760px;
}

.sponsor {
  width: 250px !important;
  margin: 5% 2% !important;
}


.sponsor-row {
  max-width: 80vw;
  width: 100%;
  display: flex;
  margin: 0 auto;
  flex-wrap: wrap;
  justify-content: space-evenly;
}


.sponsor-row > :not(:only-child) {
  padding: 1rem;
}

.sponsor-row > a {
  display: flex;
  justify-content: center;
  flex: 1 calc(240px + 7 * 1vw);
}

.sponsor-row > a > img {
  transition: transform 0.5s, filter 0.5s;
  object-fit: contain;
}

#sponsors-sec img {
  max-height: calc(30px + 4 * 1vw);
  max-width: auto;
}

#sponsor-list {
  margin-left: 13%;
  margin-right: 13%;
}

@media (max-width: 1460px) {
  #sponsor-list {
    margin-left: 0%;
    margin-right: 0%;
  }
}

.layer2 {
  padding: 4vh 0vh 40px 0vh;
}

@media (max-width: 1000px) {
  .sponsor {
    width: 175px;
  }
}

.speakers{
    display: flex;
    flex-direction: row;
    padding: 0vw 20vw;
    margin: 2vw 0vw 2vw 0vw;
}

.gb {
  box-shadow: 2px 5px 10px #101030;
}

.gb:hover {
  box-shadow: 5px 10px 10px #101030;
}

#title-navbar-left {
  margin-left: 70px;
  font-size: 30px;
  position: absolute;
  transform: translateY(-20px);
}

.faq-page {
  text-align: center;
  clear: both;
  background: url(../img/parallax/city.jpg) no-repeat center center fixed;
  background-size: cover;
}

#copyright-wrapper {
  padding: 2vh 20vw 2vh 20vw;
}

#title-navbar-right {
  color: #ce7b91;
  font-size: 30px;
  transform: translateY(-21px) translateX(170px);
  position: absolute;
}

.masthead {
  min-height: 100vh;
  background: url(../img/parallax/city2.jpg) no-repeat center center fixed;
  background-size: cover;
}

.navbar-brand:hover {
  color: #b8d3d1;
}

.fa-bars {
  transform: translateY(2px);
}

.layer {
  background-color: #101020cc;
  top: 0;
  left: 0;
  min-width: 100vw;
  min-height: 100vh;
}

.layer2 {
  background-color: #101020cf;
}
/* ... */

